# ddl-diff

./: Cargo.toml  README.md
src/: main.rs  options.rs  table.rs
