[package]
name = "ddl-diff"
version = "0.1.1"
edition = "2021"
description = "A tool to compare two databases and generate a diff for MySQL."
license = "MIT"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
